force-app/main/default/objects/SouthAfricanID__c/SouthAfricanID__c.object-meta.xml
<CustomObject>
    <description>Object to Store All information related to South African Id searches.</description>
    <label>South African ID</label>
    <nameField>
        <displayFormat>SAId-{0000}</displayFormat>
        <label>South African ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>South African IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>