force-app/main/default/objects/SouthAfricanID__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <description>Citizenship from Id number.</description>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA citizen</fullName>
            </value>
            <value>
                <fullName>Permanent resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>