force-app/main/default/objects/SouthAfricanID__c/fields/DateofBirth__c.field-meta.xml
<CustomField>
    <fullName>DateofBirth__c</fullName>
    <description>Date of Birth from Id number.</description>
    <label>Date of Birth</label>
    <length>20</length>
    <type>Text</type>
</CustomField>