force-app/main/default/objects/SouthAfricanID__c/fields/NumberOfQueries__c.field-meta.xml
<CustomField>
    <fullName>NumberOfQueries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many times this ID number has been searched on the platform.</description>
    <label>Number of Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>