force-app/main/default/objects/SouthAfricanID__c/fields/SouthAfricanIDNumber__c.field-meta.xml
<CustomField>
    <fullName>SouthAfricanIDNumber__c</fullName>
    <externalId>true</externalId>
    <label>South African ID Number</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>