force-app/main/default/objects/SouthAfricanID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SouthAfricanIDNumber__c</columns>
    <columns>Citizenship__c</columns>
    <columns>DateofBirth__c</columns>
    <columns>Gender__c</columns>
    <columns>NumberOfQueries__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>